# job_hunter

./: .gitignore  README.md  pyproject.toml  usermanual.md
.cursor/rules/: job-hunter-workflow.mdc
.gemini/commands/: cv-generate.toml  resume-ingest.toml
data/: position.example.yaml  resume.example.yaml  weblist.example.yaml
data/cv_template/: TLCresume.sty  resume.tex
job_hunter/: __init__.py  __main__.py  agent_cli.py  cli.py  json_extract.py  paths.py
job_hunter/cv_generate/: __init__.py  experience_notes.py  filename.py  gemini_ats.py  gemini_tailor.py  job_description.py  latex_compile.py  latex_text_metrics.py  layout_constraints.py  run_cv_generate.py  template_copy.py  template_files.py  validate_layout.py  validate_previous.py  validate_tailored.py
job_hunter/job_filtering/: __init__.py  csv_io.py  gemini_filter.py  job_page_text.py  run_job_filtering.py
job_hunter/job_listings/: __init__.py  board_fetchers.py  board_urls.py  company_display.py  config_sources.py  http_json.py  location_geo.py  models.py  (+6 more)
tests/: test_agent_cli.py  test_board_fetchers_dates.py  test_board_fetchers_lever.py  test_company_display.py  test_cv_generate.py  test_experience_notes.py  test_gemini_ats.py  test_job_filtering.py  test_job_page_text.py  test_json_extract.py  test_latex_compile.py  test_layout_constraints.py  test_listings_export_mocked.py  test_location_description_rescue.py  test_normalize.py  test_position_filters.py  test_query_plan.py  test_resume_settings.py  test_text_cleaner.py  test_validate_previous.py  test_weblist_expand.py  test_write_jobs_csv.py
(+48 files in other folders)
