[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter"
version = "0.1.0"
description = "Agentic job-hunting toolkit: resume PDF ingestion via Gemini CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=5.0.0",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
job-hunter = "job_hunter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["job_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
